fixed thumbail bug and space bug on mobile

--- a/docs/style/desktop.css
+++ b/docs/style/desktop.css
@@ -13,3 +13,9 @@
 .mobile-navbar{
     display: none;
 }
+
+.clickable-title:hover{
+    cursor: pointer;
+    padding-left: 10pt;
+    text-decoration: underline;
+}
